In order to fix a possibility of non aligned grid items in situations where the heights are variable, I've added :nth-child(xn+1) to each of the block-grid elements.

--- a/stylesheets/grid.css
+++ b/stylesheets/grid.css
@@ -80,13 +80,17 @@
 	
 	.block-grid.two-up { margin-left: -4% }
 	.block-grid.two-up>li { margin-left: 4%; width: 46%; }
+	.block-grid.two-up>li:nth-child(2n+1) {clear: left;}
 	
 	.block-grid.three-up { margin-left: -2% }
 	.block-grid.three-up>li { margin-left: 2%; width: 31.3%; }
+	.block-grid.three-up>li:nth-child(3n+1) {clear: left;}
 	
 	.block-grid.four-up { margin-left: -2% }
 	.block-grid.four-up>li { margin-left: 2%; width: 23%; }
+	.block-grid.four-up>li:nth-child(2n+1) {clear: left;}
 	
 	.block-grid.five-up { margin-left: -1.5% }
 	.block-grid.five-up>li { margin-left: 1.5%; width: 18.5%; }
+	.block-grid.five-up>li:nth-child(2n+1) {clear: left;}
 
